enable debug + fix dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@ body {
 }
 
 .login-input {
-    @apply mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-base p-2;
+    @apply mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-base p-2 text-black dark:text-white;
 }
 
 /* remove scrollbar in browsers */
